--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -4,21 +4,25 @@
   display: block;
   position: relative;
   .section-box {
-    display: flex;
     padding: 50px 50px 25px 50px;
     .picture-container {
       display: flex;
-      width: 500px;
-      height: 500px;
+    flex-grow: 1;
+
+      max-width: 450px;
+      max-height: 450px;
+      min-width: 190px;
+      min-height: 190px;
       .main-picture {
+        margin: 50px;
         border-radius: 50%;
         display: flex;
-        width: 80%;
+        min-width: 190px;
+        // width: 400px;
         transition: all 300ms;
-        // filter: saturate(0.9);
         filter:  drop-shadow(10px 16px 18px rgba(255, 187, 0, 0.582)) saturate(0.5) ;
         &:hover{
-          width: 420px;
+          width: 90%;
           filter:  drop-shadow(10px 16px 18px rgba(255, 187, 0, 0.582)) saturate(0.9);
         }
       }
@@ -31,6 +35,9 @@
   display: flex;
   padding: 15px 50px 15px 50px;
   width: 60%;
+  flex-grow: 3;
+  min-width:508px;
+  max-width: 900px ;
   .text-container{
     flex-direction: column;
     display: flex;
