--- a/src/components/Work.scss
+++ b/src/components/Work.scss
@@ -7,42 +7,66 @@
     display: flex;
     flex-direction: column;
     padding: 50px 50px 25px 50px;
-  }
-}
-.card-wrapper{
-  height: 650px;
-  display: flex;
-}
-
-.card-container {
-  width: 240px;
-  display: flex;
-  flex-direction: column;
-
-  img{
-    border-radius: 12%;
-    display: flex;
-    width: 180px;
-    transition: all 300ms;
-    // filter: saturate(0.9);
-    filter: drop-shadow(10px 16px 18px rgba(255, 187, 0, 0.582)) saturate(0.5);
-    &:hover {
-      width: 190px;
+    .text-container {
+      flex-direction: column;
+      display: flex;
+      p:nth-of-type(1) {
+        font-weight: 400;
+        text-align: justify;
+      }
+      p:nth-of-type(2) {
+        font-size: 1rem;
+        color: var(--subtitle-color);
+        font-style: italic;
+        margin-bottom: 10px;
+      }      
+      p:nth-of-type(3) {
+        font-weight: 400;
+        font-size: 1rem;
+        margin-bottom: 10px;
+      }
+      .badges-wrapper{
+        display: flex;
+        flex-wrap: wrap;
+      }
     }
+    .cards-container {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      gap: 35px;
+      .card-wrapper {
+        margin-top: 80px;
+        min-height: 510px;
+        display: flex;
+        .card-back{
+          min-height: 531px;
+          border-radius: 30px;
+          background: #e0e0e0;
+          box-shadow: 10px 10px 20px #bebebe, -10px -10px 20px #ffffff;
+          .card-container {
+            width: 250px;
+            margin: -70px 15px 15px 15px;
+            text-align: center;
+            display: block;
+            img {
+              border-radius: 20px;
+              position: relative;
+              width: 180px;
+              height: 180px;
+              transition: all 300ms;
+              &:hover {
+                width: 190px;
+                height: 190px;
+              }
+            }
+          }
+        }
+      }
+    }
+    
   }
 }
 
-.text-container {
-  flex-direction: column;
-  display: flex;
-  p:nth-of-type(1) {
-    font-weight: 400;
-    margin: 1rem;
-    text-align: justify;
-  }
-  p:nth-of-type(2) {
-    font-size: 1rem;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-  }
-}
+
+
