--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -5,51 +5,48 @@
   position: relative;
   .section-box {
     padding: 50px 50px 25px 50px;
+    .box-container {
+      height: 55vh;
+      max-height: 90%;
+      display: flex;
+      padding: 15px 50px 15px 50px;
+      width: 60%;
+      flex-grow: 3;
+      min-width: 508px;
+      max-width: 900px;
+      .text-container {
+        flex-direction: column;
+        display: flex;
+        p:nth-of-type(1) {
+          font-weight: 400;
+          margin: 1rem;
+          text-align: justify;
+        }
+        p:nth-of-type(2) {
+          font-size: 1rem;
+          margin-bottom: 1rem;
+          margin-top: 1rem;
+        }
+      }
+    }
     .picture-container {
       display: flex;
-    flex-grow: 1;
-
       max-width: 450px;
       max-height: 450px;
       min-width: 190px;
+      animation: circularShadow 2s forwards infinite;
       min-height: 190px;
       .main-picture {
+        filter: saturate(0);
         margin: 50px;
         border-radius: 50%;
         display: flex;
         min-width: 190px;
-        // width: 400px;
         transition: all 300ms;
-        filter:  drop-shadow(10px 16px 18px rgba(255, 187, 0, 0.582)) saturate(0.5) ;
-        &:hover{
-          width: 90%;
-          filter:  drop-shadow(10px 16px 18px rgba(255, 187, 0, 0.582)) saturate(0.9);
+        &:hover {
+          filter: saturate(1);
         }
       }
-    }
-  }
-}
-.box-container {
-  height: 55vh;
-  max-height: 90%;
-  display: flex;
-  padding: 15px 50px 15px 50px;
-  width: 60%;
-  flex-grow: 3;
-  min-width:508px;
-  max-width: 900px ;
-  .text-container{
-    flex-direction: column;
-    display: flex;
-    p:nth-of-type(1) {
-      font-weight: 400;
-      margin:  1rem;
-      text-align: justify;
-    }
-    p:nth-of-type(2) {
-      font-size: 1rem;
-      margin-bottom: 1rem;
-      margin-top: 1rem;
     }
   }
 }
