--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -1,168 +1,115 @@
-.contact-container {
-  display: flex;
-  background-color: rgb(220, 220, 220);  
-}
-
-.form-container {
-  flex-grow: 1;
-  padding: 15px;
-  max-width: 90%;
-  display: flex;
-}
-.contact-form {
-  display: flex;
-  height: 60vh;
-  max-width: 50vw;
-  flex-direction: column;
-  border-radius: 45px;
-}
-
-.contact-container div .text-container {
-  display: flex;
-  flex-grow: 1;
-  margin: 30px;
-  flex-direction: column;
-  max-width: 50%;
-  justify-content: center;
-  max-height: 45vh;
-  text-align: justify;
-  flex-grow: 1;
-}
-::placeholder {
-  color: #fff;
-  font-size: 20px;
-}
-.input-form {
-  font-size: 20px;
-  font-weight: 500;
-  max-width: 90%;
-  width: 20vw;
-  border-radius: 8px;
-  height: 100px;
-  border-color: transparent;
-  border-style: none;
-  text-align: center;
-  margin: 10px;
-  background-color: #ffffff57;
-
-  &::placeholder {
-    color: black;
-    opacity: 1;
-  }
-}
-
-.input-form-text {
-  font-size: 20px;
-  font-weight: 500;
-  max-width: 90%;
-  width: 20vw;
-  height: 200px;
-  border-radius: 15px;
-  border-color: transparent;
-  text-decoration: none;
-  text-align: center;
-  margin: 10px;
-  justify-content: center;
-  justify-items: center;
-  resize: none;
-  background-color: #ffffff57;
-  &::placeholder { 
-    color: black;
-    opacity: 1;
-  }
-}
-.contact-container div .text-container p:nth-of-type(1) {
-  font-weight: 400;
-  font-size: 1.1rem;
-  margin: 2rem 1rem;
-}
-
-.text-container p:nth-of-type(2) {
-  font-size: 0.6rem;
-  margin-bottom: 3rem;
-}
-.form-container div .btn-form {
-  list-style-type: none;
-  float: left;
-  border: none;
-  color: #fff;
-  font-size: 15px;
-  font-weight: 700;
-  border-radius: 5px;
-  text-align: center;
-  outline: none;
-  cursor: pointer;
-  padding: 12px 20px;
-  visibility: visible;
-  background: rgba(4, 255, 217, 0.753);
-  animation: gradient 2s ease infinite;
-  transition: 0.5s;
-}
-.form-container div .btn-form:hover {
-  box-shadow: inset -2px -2px 6px rgba(255, 255, 255, 0.7),
-    inset -2px -2px 4px rgba(255, 255, 255, 0.5),
-    inset 2px 2px 2px rgba(255, 255, 255, 0.075),
-    inset 2px 2px 4px rgba(0, 0, 0, 0.15);
-  background: linear-gradient(
-    0deg,
-    rgba(255, 187, 0, 0.792),
-    rgba(4, 255, 217, 0.753),
-    rgba(255, 187, 0, 0.792)
-  );
-  background-size: 200% 400%;
-}
-// aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-
 $white: #fff;
 $gradient-start: rgba(255, 187, 0, 0.792);
 $gradient-end: rgba(0, 162, 138, 0.342);
 
-.box {
-  position: relative;
-  width: 220px;
-  height: 48vh;
-  max-width: 90%;
+.contact-container {
+  z-index: 50;
+  background-color: #dcdcdc;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0.5s;
-  z-index: 1;
-
-  &::before,
-  &::after {
-    content: " ";
-    position: absolute;
-    top: 0;
-    left: 35px;
-    width: 50%;
-    height: 100%;
-    background: linear-gradient(315deg, $gradient-start, $gradient-end);
-    border-radius: 8px;
-    transform: skewX(35deg);
-    transition: 0.5s;
-  }
-
-  &::after {
-    filter: blur(30px);
-  }
-
-  &:hover::before,
-  &:hover::after {
-    transform: skewX(0deg) scaleX(1.3);
-  }
-
-  .content {
-    position: relative;
-    max-width: 40vw;
-    height: 40vh;
-    border-radius: 20px;
-    z-index: 1;
-    transform: 0.5s;
-    color: $white;
-    display: flex;
-    margin-right: 50px;
-    justify-content: center;
-    align-items: center;
+  position: relative;
+  .section-box {
+    padding: 50px 50px 25px 50px;
+    .text-container {
+      margin: 30px;
+      flex-direction: column;
+      min-width: 280px;
+      max-width: 700px;
+      justify-content: center;
+      max-height: 45vh;
+      text-align: justify;
+      p:nth-of-type(1) {
+        font-weight: 400;
+        font-size: 1.1rem;
+        margin: 2rem 1rem;
+      }
+      p:nth-of-type(2) {
+        font-size: 0.6rem;
+        margin-bottom: 3rem;
+      }
+    }
+    .box-container {
+      height: 55vh;
+      max-height: 90%;
+      display: flex;
+      padding: 15px 50px 15px 50px;
+      width: 60%;
+      flex-grow: 3;
+      min-width: 508px;
+      max-width: 900px;
+      .contact-form {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        .input-form {
+          font-size: 20px;
+          font-weight: 500;
+          border-radius: 5px;
+          height: 60px;
+          width:100% ;
+          text-align: center;
+          margin: 10px;
+          background-color: #ffffff57;
+          &:focus {
+            background-color:rgba(255, 187, 0, 0.096);
+          }
+          &::placeholder {
+            color: rgb(68, 68, 68);
+          }
+        }
+        .input-form-text {
+          font-size: 20px;
+          font-weight: 500;
+          border-radius: 5px;
+          min-height: 250px;
+          width:100% ;
+          text-align: center;
+          margin: 10px;
+          border-style: none;
+          background-color: #ffffff57;
+          &:focus {
+            background-color:rgba(255, 187, 0, 0.096);
+          }
+          &::placeholder {
+            color: rgb(68, 68, 68);
+          }
+        }
+      }
+      .btn-form {
+        min-width: 120px;
+        list-style-type: none;
+        float: left;
+        border: none;
+        color: #fff;
+        font-size: 15px;
+        font-weight: 700;
+        border-radius: 5px;
+        text-align: center;
+        outline: none;
+        cursor: pointer;
+        padding: 12px 20px;
+        visibility: visible;
+        background: rgba(4, 255, 217, 0.753);
+        animation: gradient 2s ease infinite;
+        transition: 0.5s;
+        &:hover {
+          box-shadow: inset -2px -2px 6px rgba(255, 255, 255, 0.7),
+            inset -2px -2px 4px rgba(255, 255, 255, 0.5),
+            inset 2px 2px 2px rgba(255, 255, 255, 0.075),
+            inset 2px 2px 4px rgba(0, 0, 0, 0.15);
+          background: linear-gradient(
+            0deg,
+            rgba(255, 187, 0, 0.792),
+            rgba(4, 255, 217, 0.753),
+            rgba(255, 187, 0, 0.792)
+          );
+          background-size: 200% 400%;
+        }
+      }
+    }
   }
 }
 
