--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -3,8 +3,20 @@ header {
   flex-direction: column;
   height: 50px;
   top: 0;
-  width: 100%;
+  // width: 100vw;
   transition: all 0.4s ease-out;
+  h2 a{
+    font-size: 1.25rem;
+    position: absolute;
+    left: 2.5rem;
+    top: 0.8rem;
+    transition: all 300ms;
+    &:hover {
+      cursor: pointer;
+      scale: 1.2;
+      color:rgba(255, 187, 0, 0.792);
+    }
+  }
 }
 
 .hide-bar{
@@ -20,22 +32,10 @@ header {
   height: 50px;
   top: 0;
   transition: top 0.4s ease-out;
-  width: 100%;
+  // width: 100%;
+  width: 100vw;
+
   z-index: 100;
-  // background-color: #f5f5f5;
-  // box-shadow: 0 1px 25px rgba(0, 0, 0, 0.1);
-  h2 a{
-    font-size: 1.25rem;
-    position: absolute;
-    left: 2.5rem;
-    top: 0.8rem;
-    transition: all 300ms;
-    &:hover {
-      cursor: pointer;
-      scale: 1.2;
-      color:rgba(255, 187, 0, 0.792);
-    }
-  }
   ul {
     font-size: 0.75rem;
     position: absolute;
