--- a/src/components/Technologies.scss
+++ b/src/components/Technologies.scss
@@ -4,36 +4,39 @@
   display: block;
   position: relative;
   .section-box {
-    display: flex;
     padding: 50px 50px 25px 50px;
-    .picture-container {
+    .box-container {
+      height: 55vh;
+      max-height: 90%;
       display: flex;
-      width: 500px;
-      height: 500px;
-      .main-picture {
-        border-radius: 50%;
+      padding: 15px 50px 15px 50px;
+      width: 60%;
+      flex-grow: 3;
+      min-width: 508px;
+      max-width: 900px;
+      .text-container {
+        flex-direction: column;
         display: flex;
-        width: 80%;
-        transition: all 300ms;
-        filter: drop-shadow(10px 16px 18px rgba(255, 187, 0, 0.582))
-          saturate(0.5);
-        &:hover {
-          width: 420px;
-          filter: drop-shadow(10px 16px 18px rgba(255, 187, 0, 0.582))
-            saturate(0.9);
-        }
       }
     }
-  }
-  .box-container {
-    height: 55vh;
-    max-height: 90%;
-    display: flex;
-    padding: 15px 50px 15px 50px;
-    width: 60%;
-    .text-container {
-      flex-direction: column;
+    .picture-container {
       display: flex;
+      max-width: 450px;
+      max-height: 450px;
+      min-width: 190px;
+      animation: circularShadow 2s forwards infinite;
+      min-height: 190px;
+      .main-picture {
+        filter: saturate(0);
+        margin: 50px;
+        border-radius: 50%;
+        display: flex;
+        min-width: 190px;
+        transition: all 300ms;
+        &:hover {
+          filter: saturate(1);
+        }
+      }
     }
   }
 }
@@ -48,9 +51,9 @@
       margin-top: 15px;
       text-align: left;
     }
-      ul {
-        font-size: 1.2rem;
-      }
+    ul {
+      font-size: 1.2rem;
+    }
   }
 }
 .technologies-container div .text-container ul {
