--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -10,7 +10,7 @@
         display: flex;
         p:nth-of-type(1) {
           font-weight: 400;
-          margin: 1rem;
+          margin-top: 1rem;
           text-align: justify;
         }
         p:nth-of-type(2) {
