--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -31,8 +31,8 @@ html {
 .box-container{
   display: flex;
   padding: 30px 30px 50px 30px;
+  // width: 80vw;
   max-width: 800px;
-  flex-grow: 3;
 }
 .picture-container {
   display: flex;
@@ -114,6 +114,7 @@ a {
 
 
 @media (max-width: 588px) {
+
   header,
   .email-container {
     display: none;
@@ -127,10 +128,6 @@ a {
   p{
     font-size: small;
   }
-  .parallax-group {
-    top: -100px;
-    transform: scaleY(1.3);
-  }
   .name-container h1:nth-of-type(1) {
     font-size: 1.5rem;
   }
@@ -143,23 +140,41 @@ a {
     font-size: 2.1rem;
   }
   .section-box {
-    padding: 30px !important;
+    padding: 13px 13px 20px 13px !important;
 
   }
   .box-container {
     flex-wrap: wrap;
-    // min-width:80vw;
-    // min-height: 560px !important;
+
   }
   .picture-container {
     .main-picture{
       max-width: 120px;
       margin: 10px !important;
-
+      filter: saturate(1);
     }
   }
   .menu{
     display: block;
+  }
+  .technologies-container div div .text-container .list {
+    div {
+      margin:0 !important;
+      h3 {
+        margin-top: 10px;
+        text-align: left;
+        font-size: 1rem !important;
+      }
+      ul {
+        font-size: small !important;;
+      }
+    }
+  }
+  .technologies-container div .text-container ul {
+    margin-top: 20px;
+    font-weight: 400;
+    font-size: 1.1rem;
+    margin: 1rem;
   }
 }
 
@@ -173,7 +188,6 @@ a {
   }
   .section-box {
     flex-wrap: wrap;
-    // width: vw;
   }
   .box-container {
     flex-wrap: wrap;
@@ -215,39 +229,3 @@ a {
     filter: drop-shadow(-20px 0px 30px rgba(255, 187, 0, 0.582));
   }
 }
-
-// @media (max-width:768px) {
-//   .cards-container {
-//     flex-direction: row;
-//   }
-//   // .App-logo {
-//   //   animation: App-logo-spin infinite 20s linear;
-//   // }
-// }
-
-// @media (max-width:986px) {
-//   .cards-container {
-
-//     flex-direction: column !important;
-//   }
-//   // .App-logo {
-//   //   animation: App-logo-spin infinite 20s linear;
-//   // }
-// }
-// @media (max-width:768px) {
-//   .cards-container {
-//     flex-direction: row;
-//   }
-//   // .App-logo {
-//   //   animation: App-logo-spin infinite 20s linear;
-//   // }
-// }
-
-// @keyframes App-logo-spin {
-//   from {
-//     transform: rotate(0deg);
-//   }
-//   to {
-//     transform: rotate(360deg);
-//   }
-// }
