--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -229,3 +229,40 @@ a {
     filter: drop-shadow(-20px 0px 30px rgba(255, 187, 0, 0.582));
   }
 }
+
+
+.loading-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.4);
+  z-index: 9999; 
+}
+
+.spinner {
+  position: relative;
+  width: 100px;
+  height: 100px;
+}
+
+.spinner:before , .spinner:after{
+  content: ' ';
+  border-radius: 50%;
+  position: absolute;
+  inset: 0;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3) inset;
+}
+.spinner:after {
+  box-shadow: 0 3px 0 #11c0de inset;
+  animation: rotate 1s linear infinite;
+}
+
+@keyframes rotate {
+  0% {  transform: rotate(0)}
+  100% { transform: rotate(360deg)}
+}
