--- a/src/components/Work.scss
+++ b/src/components/Work.scss
@@ -10,20 +10,29 @@
     .text-container {
       flex-direction: column;
       display: flex;
+      gap: 12px;
       p:nth-of-type(1) {
-        font-weight: 400;
-        text-align: justify;
+        font-weight: 600;
+        font-size: 1.3rem;
+        text-align: center;
+        margin-top: 12px;
       }
       p:nth-of-type(2) {
         font-size: 1rem;
         color: var(--subtitle-color);
         font-style: italic;
-        margin-bottom: 10px;
+
       }      
       p:nth-of-type(3) {
         font-weight: 400;
         font-size: 1rem;
-        margin-bottom: 10px;
+
+      }      
+      .project-link {
+        font-weight: 600;
+        font-style: italic;
+
+
       }
       .badges-wrapper{
         display: flex;
@@ -70,3 +79,35 @@
 
 
 
+.project-link {
+  position: relative;
+  text-decoration: none; 
+  color: #34badb;  
+  font-size: 1.2rem;
+  font-weight: bold;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.project-link::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #3498db; 
+  transform: scaleX(0);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.project-link:hover {
+  color: #e7a03c;  
+  transform: scale(1.1); 
+}
+
+.project-link:hover::before {
+  transform: scaleX(1); 
+  transform-origin: bottom left;
+  background-color: #e7a03c; 
+}
