Card wrap en projects

--- a/src/components/Projects.scss
+++ b/src/components/Projects.scss
@@ -36,8 +36,8 @@
       }
     }
     .cards-container {
-      margin-top: 80px;
       display: flex;
+      flex-wrap: wrap;
       flex-direction: row;
       gap: 35px;
       .card-wrapper {
